# file-hash

./: .gitignore  CMakeLists.txt  README.md  crc32.c  crc32.h  hashfile  hashfile.c  makefile  md5.c  md5.h  mfilehash.c  mfilehash.m  mkversion.cmake  sha1.h  sha256.h  test_filehash.m
apps/: CMakeLists.txt  cryptrand.c  hashfile.c  uuid4gen.c  uuidgen.c
include/: version.h.in
include/hashers/: common.h  crc32.h  md5.h  sha1.h  sha256.h
include/uuid/: uuid.h
matlab/: CMakeLists.txt  make.m  mex_mfilehash.c  mex_uuidgen.c  uuidgen.m
mex/: CMakeLists.txt  blowfish.m  cryptrand.m  make.m  mex_blowfish.c  mex_cryptrand.c  mex_mfilehash.c  mex_mfilehash.mexw64  mex_uuidgen.c  mex_uuidrand.c  mex_uuidspace.c  mfilehash.m  uuidrand.m  uuidspace.m
src/: CMakeLists.txt  common.c  common.h  crc32.c  crc32.h  hashfile.c  md5.c  md5.h  sha1.c  sha1.h  sha256.c  sha256.h  uuid4gen.c
src/blowfish/: blowfish.c  blowfish.h
src/hashers/: CMakeLists.txt  crc32.c  md5.c  sha1.c  sha256.c  sha256.h
src/uuid/: CMakeLists.txt  uuid.c  uuid4.c  uuid4.h
test/: CMakeLists.txt  file_hash.py  results.json  testBlowfish.c  testHash.c  testUUID.c  test_filehash.m  test_filehash.py  test_uuid.m
