file(GLOB_RECURSE hash_sources hashers/*.c hashers/*.h)
add_definitions(-D_FILE_OFFSET_BITS=64)

add_executable(hashfile hashfile.c ${hash_sources})
add_executable(uuid4gen uuid4gen.c uuid/uuid4.c uuid/uuid4.h)
if (WIN32)
    message(STATUS "Windows build.")
    target_compile_options(hashfile PUBLIC)
    target_link_libraries(uuid4gen -lbcrypt)
else()
    # Unix. None of this "WinMain" garbage...
    message(STATUS "UNIX build.")
    target_compile_options(hashfile PUBLIC -O2 -Wall)
    target_compile_options(uuid4gen PUBLIC -O2 -Wall)
endif()
target_include_directories(hashfile PUBLIC hashers)
target_include_directories(uuid4gen PUBLIC uuid)